--- a/style.css
+++ b/style.css
@@ -1,14 +1,53 @@
-nav {
-    background-color: #F7F1D8;
-}
-nav > ul > li{
-    display: inline-block;
-    position: relative;
-    padding: 10px 10px;
-    right: 0px;
+body {
+  margin: 0px;
+  font-family: Tahoma, Verdana, Segoe, sans-serif;
 }
 
-nav > div, nav > ul {
-    display: inline-block;
-    position: relative;
+/* nav style */
+
+nav {
+  background-color: #e9e7f4;
+  -webkit-box-shadow: 0px 3px 7px -4px rgba(0, 0, 0, 0.47);
+  -moz-box-shadow: 0px 3px 7px -4px rgba(0, 0, 0, 0.47);
+  box-shadow: 0px 3px 7px -4px rgba(0, 0, 0, 0.47);
+  padding: 0px 50px 0px 50px;
+  display: flex;
+  justify-content: space-between;
+  font-weight: 300;
+}
+
+nav > #mobileMenus {
+  position: absolute;
+  list-style: none;
+  top: 10%;
+  right: 5%;
+  background-color: #e9e7f4;
+  -webkit-box-shadow: 0px 3px 7px -4px rgba(0, 0, 0, 0.47);
+  -moz-box-shadow: 0px 3px 7px -4px rgba(0, 0, 0, 0.47);
+  box-shadow: 0px 3px 7px -4px rgba(0, 0, 0, 0.47);
+  padding: 20px;
+  text-align: center;
+  display: none;
+}
+
+nav > #mobileMenus > li {
+  padding: 10px 20px;
+}
+nav > div {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 10px;
+  margin: 16px 16px;
+}
+
+.fa-bars {
+  padding: 10px 10px;
+  margin: 16px 16px;
+  font-size: 20px;
+}
+/* Style for Desktop */
+nav > #menus > li {
+  display: inline-block;
+  position: relative;
+  padding: 10px 20px;
 }
