--- a/css/contacts.css
+++ b/css/contacts.css
@@ -42,6 +42,8 @@ textarea {
   width: 100%;
   padding: 10px 10px;
   box-sizing: border-box;
+  line-height: 20px;
+  height: 40px;
 }
 textarea {
   resize: none;
@@ -65,6 +67,10 @@ button {
 }
 input::placeholder {
   overflow: visible !important;
+  line-height: normal !important;
+}
+input::-webkit-input-placeholder {
+  line-height: normal !important;
 }
 form > p {
   margin-top: 5px;
