--- a/css/projects.css
+++ b/css/projects.css
@@ -110,6 +110,11 @@ h4 {
   height: 300px;
   background-size: cover;
 }
+#work8 {
+  background-image: url("https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/97b858103494729.5f4e75ca5fa52.png");
+  height: 300px;
+  background-size: cover;
+}
 #work1.lazyBackground,
 #work2.lazyBackground,
 #work3.lazyBackground,
