--- a/css/projects.css
+++ b/css/projects.css
@@ -111,7 +111,7 @@ h4 {
   background-size: cover;
 }
 #work8 {
-  background-image: url("https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/97b858103494729.5f4e75ca5fa52.png");
+  background-image: url("../imgs/portfolioCover.png");
   height: 300px;
   background-size: cover;
 }
