--- a/css/projects.css
+++ b/css/projects.css
@@ -109,6 +109,12 @@ h4 {
   height: 300px;
   background-size: cover;
 }
+
+#work9 {
+  background-image: url("../imgs/WebDashboard@2x.jpg");
+  height: 300px;
+  background-size: cover;
+}
 #work7 {
   background-image: url("../imgs/Proposal Cover.png");
   height: 300px;
